src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Date_Delivery__c</fullName>
        <label>Data prevista para entrega</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Data da Compra</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Order__c</fullName>
        <externalId>true</externalId>
        <label>Número do Pedido</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedidos</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Forma de Pagamento | Parcelamento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relelase_Date_Billing__c</fullName>
        <label>Data de Liberação para Faturamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sale_Processing_Date__c</fullName>
        <label>Data do Processamento da Venda</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Vendedor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Cidade de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingComplement__c</fullName>
        <label>Complemento de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>País de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>CEP de Entrega</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Estado de Entrega</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Rua de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Date_Delivery__c</fullName>
        <label>Data da efetivação da entrega</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_of_Pruchase__c</fullName>
        <label>Status da Compra</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Valor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>